# template-python

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.black.toml  pyproject.toml  pytest.ini  rebuild_db.py  ruff.toml
.github/workflows/: ci.yml
.trae/: settings.json  snippets.json
docker/: .env.docker  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  init.sql
docs/: AUTO_FORMAT.md  api-guide.md  configuration.md  database.md  deployment.md  development.md  docker.md  logging.md  overview.md  quick-reference.md
src/: __init__.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  files.py  health.py  heroes.py  users.py
src/db/: __init__.py  config.py  connection.py
src/models/: __init__.py  base.py  hero.py  user.py
src/utils/: __init__.py  api_response.py  db_error_handler.py  logger.py  logger_example.py  pagination.py  response.py  security.py
tests/: __init__.py  conftest.py  test_api.py  test_files.py  test_main.py  test_models.py
uploads/: .gitkeep
