[project]
name = "template-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.0.0",
    "psutil>=7.0.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "mypy>=1.16.1",
    "pre-commit>=4.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

# 注意：工具配置已分离到独立文件
# - Ruff: ruff.toml
# - Black: pyproject.black.toml
# - MyPy: mypy.ini
